--- a/Password Generator/co144447da519dcd3ea14b7a3/index.css
+++ b/Password Generator/co144447da519dcd3ea14b7a3/index.css
@@ -7,6 +7,12 @@ body {
     top: 64px;
 }
 
+.container {
+    border: 5px solid #10B981;
+    border-radius: 10px;
+    padding: 50px;
+}
+
 h1, h3 {
     color: white;
     font-family: 'Inter', sans-serif;
@@ -46,7 +52,7 @@ h1, h3 {
 }
 
 #line {
-    width: 446px;
+    width: 440px;
     height: 0px;
     left: 52px;
     top: 361px;
@@ -56,9 +62,7 @@ h1, h3 {
 
 .box {
     display: flex;
-    justify-content: space-around;
-    margin: 20px 100px 0px 0px
-    
+    margin-top: 20px   
 }
 
 #box1 {
@@ -74,7 +78,7 @@ h1, h3 {
     font-size: 16px;
     line-height: 32px;
     text-align: center;
-    margin-right: 20px;
+    margin-right: 35px;
 }
 #box2 {
     width: 211px;
